# ROCmValidationSuiteApp

./: CMakeLists.txt  README.md  sample.conf
src/: CMakeLists.txt  rvs_app.c
